--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
 
 
-  <script type="text/javascript" src="assets/js/main.js">
+  <!-- <script type="text/javascript" src="assets/js/main.js">
+  </script> -->
+
+  <script type="text/javascript" src="assets/js/correzionePaolo.js">
   </script>
 </body>
 </html>
